--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="row g-0  ">
 
 
-            <div class="col-lg-6 col-md-12  col-sm-12  " id="image-padding">
+            <div class="col-lg-6 col-md-12  col-sm-12  " >
                 <img class="img-row " src="./image/1.jpg" class="img-responsive" width="100%">
                 <div class="overlay">
                     <div class="text">Less</div>
@@ -54,104 +54,104 @@
             </div>
 
 
-            <div class="col-lg-6  col-md-12  col-sm-12 " id="image-padding">
+            <div class="col-lg-6  col-md-12  col-sm-12 ">
                 <img class="img-row" src="./image/2.jpg" class="img-responsive" width="100%">
                 <div class="overlay">
                     <div class="text">Kizu</div>
                 </div>
             </div>
 
-            <div class="col-lg-6 col-md-12  col-sm-12" id="image-padding">
+            <div class="col-lg-6 col-md-12  col-sm-12" >
                 <img class="img-row" src="./image/3.jpg" class="img-responsive" width="100%">
                 <div class="overlay">
                     <div class="text">Hex</div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-12  col-sm-12" id="image-padding">
+            <div class="col-lg-6 col-md-12  col-sm-12" >
                 <img class="img-row" src="./image/4.jpg" class="img-responsive" width="100%">
                 <div class="overlay">
                     <div class="text">Tind</div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-12  col-sm-12" id="image-padding">
+            <div class="col-lg-6 col-md-12  col-sm-12" >
                 <img class="img-row" src="./image/5.jpg" class="img-responsive" width="100%">
                 <div class="overlay">
                     <div class="text">Coil</div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-12  col-sm-12 " id="image-padding">
+            <div class="col-lg-6 col-md-12  col-sm-12 " >
                 <img class="img-row" src="./image/6.jpg" class="img-responsive" width="100%">
                 <div class="overlay">
                     <div class="text">The Dot</div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-12  col-sm-12 " id="image-padding">
+            <div class="col-lg-6 col-md-12  col-sm-12 " >
                 <img class="img-row" src="./image/7.jpg" class="img-responsive" width="100%">
                 <div class="overlay">
                     <div class="text">Pinch</div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-12  col-sm-12 " id="image-padding">
+            <div class="col-lg-6 col-md-12  col-sm-12 " >
                 <img class="img-row" src="./image/8.jpg" class="img-responsive" width="100%">
                 <div class="overlay">
                     <div class="text">Stripes</div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-12  col-sm-12 " id="image-padding">
+            <div class="col-lg-6 col-md-12  col-sm-12 " >
                 <img class="img-row" src="./image/9.jpg" class="img-responsive" width="100%">
                 <div class="overlay">
                     <div class="text">Scoop</div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-12  col-sm-12 " id="image-padding">
+            <div class="col-lg-6 col-md-12  col-sm-12 " >
                 <img class="img-row" src="./image/10.jpg" class="img-responsive" width="100%">
                 <div class="overlay">
                     <div class="text">Fjell</div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-12  col-sm-12 " id="image-padding">
+            <div class="col-lg-6 col-md-12  col-sm-12 " >
                 <img class="img-row" src="./image/11.jpg" class="img-responsive" width="100%">
                 <div class="overlay">
                     <div class="text">bloc</div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-12  col-sm-12 " id="image-padding">
+            <div class="col-lg-6 col-md-12  col-sm-12 " >
                 <img class="img-row" src="./image/12.jpg" class="img-responsive" width="100%">
                 <div class="overlay">
                     <div class="text">Con</div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-12  col-sm-12 " id="image-padding">
+            <div class="col-lg-6 col-md-12  col-sm-12 " >
                 <img class="img-row" src="./image/13.jpg" class="img-responsive" width="100%">
                 <div class="overlay">
                     <div class="text">Kvart</div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-12  col-sm-12 " id="image-padding">
+            <div class="col-lg-6 col-md-12  col-sm-12 " >
                 <img class="img-row" src="./image/14.jpg" class="img-responsive" width="100%">
                 <div class="overlay">
                     <div class="text">Clover</div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-12  col-sm-12 " id="image-padding">
+            <div class="col-lg-6 col-md-12  col-sm-12 " >
                 <img class="img-row" src="./image/15.jpg" class="img-responsive" width="100%">
                 <div class="overlay">
                     <div class="text">Undring</div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-12  col-sm-12 " id="image-padding">
+            <div class="col-lg-6 col-md-12  col-sm-12 " >
                 <img class="img-row" src="./image/16.jpg" class="img-responsive" width="100%">
                 <div class="overlay">
                     <div class="text" style="margin-left: 10%;"> Copenhagen Chair</div>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-12  col-sm-12 " id="image-padding">
+            <div class="col-lg-6 col-md-12  col-sm-12 " >
                 <img class="img-row" src="./image/17.jpg" class="img-responsive" width="100%">
                 <div class="overlay">
                     <div class="text">Corner</div>
                 </div>
             </div>
-            <div class="col-lg-6  col-md-12  col-sm-12 " id="image-padding">
+            <div class="col-lg-6  col-md-12  col-sm-12 " >
                 <img class="img-row" src="./image/18.jpg" class="img-responsive" width="100%">
                 <div class="overlay">
                     <div class="text">clint</div>
